<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">بلدية سلفيت</string>
    <string name="hello_world">مرحبا</string>
    <string name="action_settings">تسجيل الخروج</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="sign_up">تسجيل حساب</string>
    <string name="tostSignupFirst">لم تقم بتسجيل الحساب مسبقاً, قم بتسجيل الحساب ثم حاول لاحقاً</string>
    <string name="title_activity_landing">بلدية سلفيت</string>
    <string name="complaints_title">شكاوى و اقتراحات</string>
    <string name="news_title">أخبار البلدية</string>
    <string name="latest_projects_title">آخر المشاريع</string>
    <string name="contact_title">تواصل معنا</string>
    <string name="about_title">عن البلدية</string>
    <string name="invoices_title">فواتير</string>
    <string name="about_body_1">قد تشكلت أول بلدية في سلفيت عام 1882 برئاسة الحاج عبد القادر الزير , و استمر العمل فيها حتى 1927 حيث قام البيرطانيون باستبدال هذه البلدية بمجلس قروي تحت إدارة مختار القرية رشيد مرار , و كان عدد سكان سلفيت في ذلك الوقت 2500 نسمة و بقيت كذلك حتى عام7 192 م و بعدها من 1927 م حتى 1945 م كانت هناك لجنة من وجهاء البلد تدير شؤون البلدة .</string>
    <string name="title_activity_about">عن البلدية</string>
    <string name="about_body_2">وفي سنة 1945 وخلال فترة الانتداب البريطاني، تم تشكيل أول مجلس قروي، برئاسة الحاج رشيد مرار وذلك حتى العهد الأردني، حيث في سنة 1952 تم اعتماده كمجلس محلي . و من الفترة 1955 و حتى 2005 تعاقبت على إدارة المجلس البلدي عدة مجالس فمن عام 1952 حتى عام 1957 كان رئيس المجلس الحاج عمر عفانة وفي عام 1957 استلم رئاسة البلدية مدير الناحية و حيد الجعبري و ذلك لقوة الحركة الوطنية في مدينة سلفيت و من بعدة عودة الله المحاذين رئيسا” للبلدية حتى عام 1960 م و من عام 1960 م أصبح رئيس البلدية مصطفى عبد الجواد اسليم إلا أن توفي في عام 1965 حيث أصبح رئيس البلدية الحاج نمر الحريم ومنذ عام 1966 أصبح الحاج حسن الزير رئيسا” للبلدية حتى 1997 حيث تم تعين لجنة بلدية من قبل السلطة الوطنية برئاسة د. شاهر اشتية واستمرت حتى عام 2005 م حيث جرت انتخابات للبلدية وتم انتخاب مجلس بلدي جديد يتكون من 15 عضوا منهم عضويتين وبرئاسة الشيخ تحسين ابو سليمة و بتاريخ 20&#8211;10&#8211;2012 تم انتخاب مجلس بلدي جديد لمدينة سلفيت برئاسة د. شاهر شتية اضافه إلى 11 عضو مجلس بلدي من الذكور و3 عضو مجلس بلدي من الإناث , حيث أن المجلس المنتخب هو امتداد لعدة مجالس بلدية سابقة عملوا جميعا بجد ونشاط لخدمة المدينة والقرى المجاورة وازدهارها.</string>
    <string name="about_body_3">الهيكلية التنظيمية للبلدية كما يلي :</string>
    <string name="about_body_4">يبلغ عدد موظفي البلدية 57 موظف مقسمين على الدوائر التالية:-</string>
    <string name="about_body_5">* دائرة الشؤون الإدارية</string>
    <string name="about_body_6">* الدائرة المالية</string>
    <string name="about_body_7">* دائرة العلاقات العامة والمكتبة</string>
    <string name="about_body_8">* دائرة المياه والصرف الصحي</string>
    <string name="about_body_9">* الدائرة الفنية</string>
    <string name="about_body_10">* دائرة الكهرباء</string>
    <string name="about_body_11">تزود بلدية سلفيت أهالي المدينة وقرى فرخه وخربة قيس بالمياه والكهرباء و اسكاكا و عموريه بالكهرباء كما وتقدم البلدية باقي الخدمات الأخرى (شبكة طرق, خدمة الصرف الصحي, النفايات الصلبة, مكتبة عامة, مخطط هيكلي محدث بمساحة أربعة آلاف (4000) دونم.اعتمادا على مبدأ الشفافية والمشاركة المجتمعية الفعالة وصولا إلى الهدف العام (كل الخدمات المميزة لكل المواطنين</string>
    <string name="about_body_12">حيث انتهينا حديثا من مشروع استراتيجيات تنمية وتطوير مدينة سلفيت والذي ركز على المشاركة المجتمعية الفعلية للتخطيط الاستراتيجي للمدينة والذي كان جزء من المشروع الكلي:-</string>
    <string name="about_body_13">التطوير الشامل للمؤسسة والذي تكون من:</string>
    <string name="about_body_14">تحسين وتطوير قدرة البلدية على التخطيط *</string>
    <string name="about_body_15">تعزيز هيكلية المؤسسة وقدرة الموارد البشرية.</string>
    <string name="about_body_16">* تحسين الأداء المالي للبلدية .</string>
    <string name="about_body_17">* توفير خدمات فاعله, فعالة ومتساوية للمواطنين.</string>
    <string name="about_body_18">* إضافة إلى التعاقد مع شركة تدقيق مالي خارجي لمتابعة وفحص وتدقيق العمليات الحسابية, الشجرة المحاسبية, وإعداد الموازنة السنوية وغيرها.</string>
    <string name="contact_body_1">يمكنك التواصل معنا من خلال:</string>
    <string name="contact_body_2">بلدية سلفيت </string>
    <string name="contact_body_3">الضفة الغربية- سلفيت </string>
    <string name="contact_body_4">تلفون : 92515704 (00970) </string>
    <string name="contact_body_5">فاكس: 92515803 (00970) </string>
    <string name="contact_body_6">ايميل : salfeet@salfeet.org</string>
    <string name="invoice_type">نوع الفاتورة</string>
    <string name="invoice_value">قيمة الفاتورة</string>
    <string name="extra_details">معلومات إضافية</string>
    <string name="bill_date">تاريخ الفاتورة</string>
    <string name="is_paid">مدفوعة</string>
    <string name="is_paid_true">نعم</string>
    <string name="is_paid_false">لا</string>
    <string name="title_activity_account">حسابي</string>
    <string name="view_invoices_btn_text">فواتير</string>
    <string name="customer_services_btn_text">خدمات الجمهور</string>
    <string name="title_activity_certeficates">شهادة ساكن</string>
    <string name="register_name">الاسم الشخصي</string>
    <string name="register_btn_txt">تسجيل حساب</string>
    <string name="register_mobile">رقم الهاتف</string>
    <string name="website_button_txt">موقع إلكتروني</string>
    <string name="title_activity_website">موقع البلدية</string>
    <string name="urgent_title">هواتف طارئة</string>
    <string name="facilities_title">مرافق البلدية</string>
    <string name="title_activity_facilities">المركز الجماهيري</string>
    <string name="title_activity_urgent">هواتف طارئة</string>
    <string name="view_information_btn_text">استعلامات</string>
    <string name="title_activity_information">استعلامات</string>
    <string name="title_activity_customer_services">خدمات الجمهور</string>
    <string name="title_activity_city_resident">شهادة ساكن مدينة</string>
    <string name="title_activity_complaints">تقديم شكوى</string>
    <string name="title_activity_main">بلدية سلفيت</string>

    <string-array name="complaint_types_array">
        <item>نظافة</item>
        <item>حفريات</item>
        <item>إنارة</item>
        <item>طرق</item>
        <item>محلات</item>
        <item>حدائق</item>
        <item>مباني</item>
        <item>أخرى</item>
    </string-array>

    <string name="title_activity_pay_invoice">دفع الفاتورة</string>
    <string name="title_activity_facilities_list">مرافق البلدية</string>
    <string name="title_activity_facility_masla5">مسلخ البلدية</string>
    <string name="title_activity_facility_diwan">ديوان البلدية</string>
    <string name="title_activity_facility_montazah">منتزه البلدية</string>

</resources>