<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invoice_type" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invoice_value" >
        </TextView>
    </LinearLayout>

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/extra_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/extra_details" >
        </TextView>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bill_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_date" >
        </TextView>
    </LinearLayout>
    
     
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

          <Button 
              android:id="@+id/pay_btn"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:visibility="invisible"
              android:text="ادفع"
              android:layout_weight="2"/>
        <TextView
            android:id="@+id/is_paid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/is_paid" >
        </TextView>
    </LinearLayout>
    
</LinearLayout>