<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/landing_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical"
        android:id="@+id/landing_main_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/complaint_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawableTop="@drawable/complaints_icon"
                    android:text="@string/complaints_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/news_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawableTop="@drawable/activities"
                    android:text="@string/news_title" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/projects_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawableTop="@drawable/old_places"
                    android:text="@string/latest_projects_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/contact_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawableTop="@drawable/contactus_icon"
                    android:text="@string/contact_title" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/about_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawableTop="@drawable/about_icon"
                    android:text="@string/about_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/account_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:drawableTop="@drawable/invoices_icon"
                    android:text="@string/title_activity_account" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>