<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/account_data_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/account_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxHeight="300dp"
                android:src="@drawable/m_salfeet_logo" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/invoices_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/invoices_icon"
                    android:minHeight="80dp"
                    android:text="@string/view_invoices_btn_text"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/customer_services_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/customer_services_icon"
                    android:minHeight="80dp"
                    android:text="@string/customer_services_btn_text"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/information_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:drawableTop="@drawable/about_icon"
                    android:minHeight="80dp"
                    android:text="@string/view_information_btn_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>